<?xml version="1.0"?>
<package format="2">
	<name>dr_log</name>
	<version>0.2.0</version>
	<description>Alternative logging macros for Fizyr packages.</description>
	<license>Apache v2.0</license>

	<maintainer email="h.gaiser@fizyr.com">Hans Gaiser</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>rosconsole</depend>
	<depend>roscpp</depend>
</package>
